--- a/main.html
+++ b/main.html
@@ -9,16 +9,17 @@
 <body>
 	<table border="2">
 		<thead>
+			<tbody>
 			<tr>
-				<th>Part</th>
-				<th>XS</th>
-				<th>S</th>
-				<th>M</th>
-				<th>L</th>
-				<th>XL</th>
+				<th scope="row">Part</th>
+				<th scope="row">XS</th>
+				<th scope="row">S</th>
+				<th scope="row">M</th>
+				<th scope="row">L</th>
+				<th scope="row">XL</th>
 			</tr>
 			<tr>
-				<th>Waist</th>
+				<th scope="col">Waist</th>
 				<td>25</td>
 				<td>28</td>
 				<td>30</td>
@@ -26,7 +27,7 @@
 				<td>32</td>
 			</tr>	
 			<tr>
-				<th>Chest</th>
+				<th scope="col">Chest</th>
 				<td>34</td>
 				<td>34</td>
 				<td>38</td>
@@ -34,14 +35,16 @@
 				<td>41</td>
 			</tr>	
 			<tr>
-				<th>Sleeve</th>
+				<th scope="col">Sleeve</th>
 				<td>23</td>
 				<td>24</td>
 				<td>24</td>
 				<td>25</td>
 				<td>25</td>
 			</tr>
+				</tbody
 		</thead>
+		
 	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
