--- a/main.html
+++ b/main.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 	<table border="2">
 		<thead>
-			<tbody>
 			<tr>
-				<th scope="row">Part</th>
-				<th scope="row">XS</th>
-				<th scope="row">S</th>
-				<th scope="row">M</th>
-				<th scope="row">L</th>
-				<th scope="row">XL</th>
+				<th scope="col">Part</th>
+				<th scope="col">XS</th>
+				<th scope="col">S</th>
+				<th scope="col">M</th>
+				<th scope="col">L</th>
+				<th scope="col">XL</th>
 			</tr>
+		</thead>
+		<tbody>
 			<tr>
-				<th scope="col">Waist</th>
+				<th scope="row">Waist</th>
 				<td>25</td>
 				<td>28</td>
 				<td>30</td>
@@ -27,7 +25,7 @@
 				<td>32</td>
 			</tr>	
 			<tr>
-				<th scope="col">Chest</th>
+				<th scope="row">Chest</th>
 				<td>34</td>
 				<td>34</td>
 				<td>38</td>
@@ -35,21 +33,15 @@
 				<td>41</td>
 			</tr>	
 			<tr>
-				<th scope="col">Sleeve</th>
+				<th scope="row">Sleeve</th>
 				<td>23</td>
 				<td>24</td>
 				<td>24</td>
 				<td>25</td>
 				<td>25</td>
 			</tr>
-				</tbody
-		</thead>
-		
+		</tbody>
 	</table>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
